fixed overflow on python

--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -27,6 +27,9 @@ body{
 	font-size: 2em;
 	padding-bottom: 40px;
 }
+.sub_title{
+	-webkit-text-stroke: 0;
+}
 .top{
 	width: 100%;
 	height: 120px;
@@ -218,7 +221,7 @@ body{
 }
 #nowgoal, #latergoal{
 	display: inline-block;
-	width: 45%;
+	width: 40%;
 	vertical-align: top;
 	margin-left: 10px;
 }
